--- a/phase-1/02-js-functions/index.html
+++ b/phase-1/02-js-functions/index.html
@@ -1,12 +1,23 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer src='index.js'></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script defer src="index.js"></script>
     <title>JS Functions</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <h1>Goals:</h1>
+    <ul>
+      <li>Explain why functions are important in JS</li>
+      <li>
+        Understand the difference between declaring and invoking a function
+      </li>
+      <li>
+        Understand what a first-class function is and why that matters in JS
+      </li>
+      <li>Create and use callback functions</li>
+      <li>Understand function scope vs global scope</li>
+    </ul>
+  </body>
 </html>
