--- a/phase-1/09-fetch-post/index.html
+++ b/phase-1/09-fetch-post/index.html
@@ -24,5 +24,7 @@
       </form>
     </div>
     <div id="poke-container"></div>
+    <div id="comments-form"></div>
+    <div id="collection-comments"></div>
   </body>
 </html>
